Home and Items views been updated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ForgotPassword"></activity>
         <activity android:name=".Signupactivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".SigninActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
