--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,9 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
-        
+        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.google.gms:google-services:4.2.0'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,6 +19,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io"}
+        maven { url "https://dl.bintray.com/drummer-aidan/maven/"}
         
     }
 }
